--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,31 @@ body {
   font-family: Helvetica, sans-serif;
   background-color: #444444;
   color: lightgray;
+  font-size: 1.2rem;
+  width: 90%;
+  max-width: 100%;
+  margin: auto;
+  line-height: 1.75rem;
 }
 h1 {
-  
+  color: whitesmoke;
 }
 
 a {
   color: lightskyblue;
+  text-decoration: none;
+}
+
+code {
+  background-color: lightgray;
+  border: 1px solid gray;
+  color: #444;
+  border-radius: 5px;
+  padding: 1px 5px;
+}
+@media only screen and (min-width: 1000px) {
+  body {
+    max-width: 800px;
+    width: 70%;
+  }
 }
